# digit_pkgs

./: README.md
aruco_markers/: CMakeLists.txt  package.xml
aruco_markers/config/: calibration_blue.yaml  calibration_davis.yaml  parameters.yaml
aruco_markers/launch/: dr_experiments.launch
aruco_markers/scripts/: aruco_detect.py  create_aruco.py
text_from_images/: CMakeLists.txt  package.xml
text_from_images/config/: parameters.yaml
text_from_images/launch/: detect_corners.launch  dr_experiments.launch
text_from_images/output/: OutArucoBlue.csv  OutArucoEca.csv  OutArucoElp.csv  OutArucoRs.csv  OutArucoZed.csv  Recognized_blue.txt  Recognized_ecap.txt  Recognized_elp.txt  Recognized_rs.txt  Recognized_zed.txt
text_from_images/scripts/: create_model.py  detect_keypoints.py  helper.py  read_text.py
